# socks5-python

./: README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/socks5/: main.py
src/xsocks5/: __init__.py  main.py
tests/: __init__.py  test_main.py
