[project]
name = "socks5"
version = "0.1.0"
description = "A SOCKS5 proxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
    { name = "SimpleCreator", email = "ipowerink@gmail.com" }
]

[project.scripts]
socks5 = "xsocks5.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsocks5"]

[project.urls]
Homepage = "https://github.com/Simple-Creator/socks5-python"
Repository = "https://github.com/Simple-Creator/socks5-python"
Issues = "https://github.com/Simple-Creator/socks5-python/issues"

[project.license]
text = "MIT"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
